# Syntavra

./: .gitattributes  .gitignore  .syntavra-v4-audit-trigger-4  AGENTS.md  BENCHMARKS.md  BRANCH_CLEANUP_REPORT.json  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.sha256  NOTICE  README.md  ROBLOX_STUDIO_MODE.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  codemeta.json  ecosystem-v4-benchmark-diagnostic.txt  fusion-release-smoke.json  gemini-extension.json  llms.txt  package-lock.json  package.json  provider-proxy-v4-diagnostic.txt  pyproject.toml  release-smoke.json  sitecustomize.py  strict-budget-v4-diagnostic.txt
.claude-plugin/: marketplace.json
.github/: branch-consolidation-audit-trigger.txt  branch-consolidation-cleanup-trigger.txt  copilot-instructions.md  export-current-main-trigger-v3  syntavra-unification-final6-trigger.txt  syntavra-unification-trigger
.signalcore/: ci-trigger-competitive-v4.txt  ci-trigger-real-task-final
.signalcore-bootstrap/: patch-001  patch-004  patch-006  patch-010  patch-013  patch-015  patch-016  patch-018a.b64  patch-018b1.b64  patch-019
.signalcore-direct/: PR_READY  PR_REQUESTED  payload-00.b64  payload-04.b64  payload-07.b64  payload-14b.b64  payload-16a.b64  payload-16b.b64
.signalcore-transfer-v030/: repair-008-2.b64  repair-008-3.b64
.syntavra-transport/: chunk-00.txt  chunk-01.txt  chunk-02.txt  chunk-03.txt  chunk-04.txt  chunk-05.txt  chunk-06.txt  chunk-07.txt  chunk-08.txt  chunk-09.txt  chunk-10.txt  chunk-11.txt  chunk-12.txt  chunk-13.txt  chunk-14.txt  chunk-15.txt  chunk-16.txt  chunk-17.txt  chunk-18.txt  chunk-19.txt  chunk-20.txt  chunk-21.txt  chunk-22.txt  chunk-23.txt  chunk-24.txt  chunk-25.txt  chunk-26.txt  chunk-27.txt  chunk-28.txt  chunk-29.txt  chunk-30.txt  chunk-31.txt  final-00.b64  final-01.b64  final-02.b64  final-03.b64  final-lock.b64  part-000.b64  part-001.b64  part-002.b64  (+35 more)
benchmarks/: adaptive_context_benchmark.py  hardening_v3_benchmark.py  long_session_v4_benchmark.py  measured_agent_benchmark.py  product_parity_v5_benchmark.py  roblox_profile_benchmark.py  runtime_v02_benchmark.py  runtime_v03_benchmark.py  signalbench.py  syntavra_component_benchmark.py  tool_externalization_benchmark.py  v001_pre_release_benchmark.py  v6_production_core_benchmark.py
docs/: 001_PRE_RELEASE.md  ADAPTER_PLATFORM.md  ARCHITECTURE.md  CLAIMS_POLICY.md  COMPETITIVE_GAP_REASSESSMENT_002.md  COMPLETE_COMPETITIVE_FEATURE_SET_001.md  IMPLEMENTATION_STATUS_001.md  OPERATIONS.md  P0_P2_CLOSURE_001.md  PRODUCT_GAP_MATRIX_001.md  SECURITY_MODEL.md  SIGNALBENCH.md  UNIFIED_PLAN.md  UNIFIED_PR_SCOPE.md  UNIVERSAL_LANGUAGE_PLATFORM.md
install/: index.mjs  index.test.mjs
release/: pre-release.json  publish-readiness.json
schemas/: external-benchmark-receipt.json  language-descriptor.json  language-service-manifest.json  live-integration-receipt-v1.json  live-integration-receipt.json  lsp-service-manifest.json  platform-receipt.json  product-maturity-evidence.json  provider-usage-receipt.json  semantic-index-receipt.json
signalcore_runtime/: __init__.py  __main__.py  adaptive_context.py  arm_runner.py  backup.py  benchmark_harness.py  bootstrap.py  broker_worker.py  claim_governance.py  cli.py  competitive_cli.py  compression.py  config_v6.py  context_governor.py  crypto.py  data_router.py  difficulty.py  ecosystem_mcp_extension.py  error_model.py  evidence.py  external_benchmark_cli.py  external_benchmarks.py  framework_adapters.py  history.py  hooks.py  host_adapters.py  identity.py  installer.py  janitor.py  job_scheduler.py  long_context_quality.py  long_session_planner.py  mcp_enforcement_extension.py  mcp_registry.py  mcp_server.py  memory.py  migrations.py  models.py  (+37 more)
(+423 files in other folders)
