[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntavra-runtime"
version = "0.0.1"
description = "Pre-release token and context optimization skill for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=43"]
license = {text = "MIT"}
authors = [{name = "Naveax"}]
keywords = ["token-saver", "context-optimization", "agent-skill", "coding-agent", "mcp", "tool-output", "exact-recovery"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[project.optional-dependencies]
code-intelligence = ["tree-sitter-language-pack>=0.9"]

[project.scripts]
syntavra = "syntavra_runtime.unified_cli:main"

[project.urls]
Repository = "https://github.com/Naveax/Syntavra"
Issues = "https://github.com/Naveax/Syntavra/issues"

[tool.setuptools.packages.find]
include = ["syntavra_runtime*"]

[tool.setuptools.package-data]
syntavra_runtime = ["bundled_skill/*.md", "bundled_skill/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
